--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,53 @@
 services:
+  # ELK Stack
+  # ---------------------------------------------------------------
+  
+  elasticsearch:
+    build:
+      context: ./docker/elasticsearch
+      dockerfile: Dockerfile
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=true
+      - xpack.security.authc.api_key.enabled=true
+      - ELASTIC_PASSWORD=elastic
+    volumes:
+      - ./data/elasticsearch:/usr/share/elasticsearch/data
+    networks:
+      - app-dotnet
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.17.1
+    volumes:
+      - ./docker/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./docker/logstash/pipeline:/usr/share/logstash/pipeline
+    environment:
+      - ELASTICSEARCH_HOST=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=elastic
+    ports:
+      - "5003:5000"
+    depends_on:
+      - elasticsearch
+    networks:
+      - app-dotnet
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.17.1
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=kibana_user
+      - ELASTICSEARCH_PASSWORD=kibana
+    depends_on:
+      - elasticsearch
+    networks:
+      - app-dotnet
+        
+  # Application
+  # ---------------------------------------------------------------
+  
   postgres:
     image: postgres:latest
     container_name: postgres-dotnet
