--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -21,6 +21,8 @@ ARG stage="dev"
 ARG port="5000"
 ARG logLevel="INFO"
 ARG logstashConfigs=""
+ARG phaseApiKey=""
+ARG postgresSecretName=""
 
 # Copy the published application from the build stage
 COPY --from=build /src/publish .
@@ -37,8 +39,8 @@ ENV PORT="${port}"
 ENV LOG_LEVEL="${logLevel}"
 
 # Secrets manager credentials
-ENV PHASE_API_KEY=""
-ENV POSTGRES_SECRET_NAME=""
+ENV PHASE_API_KEY="${phaseApiKey}"
+ENV POSTGRES_SECRET_NAME="${postgresSecretName}"
 ENV LOGSTASH_CONFIGS="${logstashConfigs}"
 
 # Expose the port your application will run on
