--- a/.github/workflows/relase.yml
+++ b/.github/workflows/relase.yml
@@ -78,7 +78,7 @@ jobs:
       # get latest tag on repo
       - name: Get latest tag
         id: get_tag
-        run: echo "name=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUTS
+        run: echo "name=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
       
       - name: Build and push Docker image
         run: |
