--- a/.github/workflows/relase.yml
+++ b/.github/workflows/relase.yml
@@ -81,6 +81,7 @@ jobs:
         run: echo "name=$(git describe --tags --abbrev=0)" >> $GITHUB_OUTPUT
       
       - name: Build and push Docker image
+        working-directory: app
         run: |
           docker build \
             --build-arg stage=prod \
